target/main/mt22/parser/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'auto'", "'break'", "'boolean'", "'do'", 
                     "'else'", "'false'", "'float'", "'for'", "'if'", "'integer'", 
                     "'return'", "'string'", "'true'", "'while'", "'void'", 
                     "'out'", "'continue'", "'of'", "'inherit'", "'array'", 
                     "'function'", "'readInteger'", "'printInteger'", "'readFloat'", 
                     "'writeFloat'", "'readBoolean'", "'printBoolean'", 
                     "'readString'", "'printString'", "'super'", "'preventDefault'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", 
                     "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'::'", 
                     "'='", "'('", "')'", "'{'", "'}'", "'['", "']'", "':'", 
                     "';'", "','", "'.'" ]

    symbolicNames = [ "<INVALID>", "AUTO", "BREAK", "BOOLEAN", "DO", "ELSE", 
                      "FALSE", "FLOAT", "FOR", "IF", "INTEGER", "RETURN", 
                      "STRING", "TRUE", "WHILE", "VOID", "OUT", "CONTINUE", 
                      "OF", "INHERIT", "ARRAY", "FUNC", "READINT", "PRINTINT", 
                      "READF", "WRITEF", "READBOOL", "PRINTBOOL", "READSTRING", 
                      "PRINTSTRING", "SUPER", "PREDE", "ADD", "SUB", "MUL", 
                      "DIV", "MOD", "NOT", "AND", "OR", "EQUAL", "NEQUAL", 
                      "LT", "LTE", "GT", "GTE", "CONCAT", "ASG", "LB", "RB", 
                      "LP", "RP", "LS", "RS", "COLO", "SEMI", "COMMA", "DOT", 
                      "ID", "FLOATLIT", "INT", "STRLIT", "WS", "WS1", "BLOCK_COMMENT", 
                      "LINE_COMMENT", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decls = 1
    RULE_decl = 2
    RULE_stmt = 3
    RULE_assginsta = 4
    RULE_callstmt = 5
    RULE_lhs = 6
    RULE_ifsta = 7
    RULE_forsta = 8
    RULE_contista = 9
    RULE_breaksta = 10
    RULE_returnsta = 11
    RULE_whilesta = 12
    RULE_dosta = 13
    RULE_blocksta = 14
    RULE_body1 = 15
    RULE_listval = 16
    RULE_listparam = 17
    RULE_paramemter = 18
    RULE_vardecl = 19
    RULE_noninitvardecl = 20
    RULE_initvardecl = 21
    RULE_initvardeclrec = 22
    RULE_idlist = 23
    RULE_spefuncstmt = 24
    RULE_function = 25
    RULE_specialfunc = 26
    RULE_readInt = 27
    RULE_printInt = 28
    RULE_readFloat = 29
    RULE_writeFloat = 30
    RULE_printBool = 31
    RULE_readBool = 32
    RULE_readString = 33
    RULE_printString = 34
    RULE_superfunc = 35
    RULE_predef = 36
    RULE_listexp = 37
    RULE_exp0 = 38
    RULE_exp1 = 39
    RULE_exp2 = 40
    RULE_exp3 = 41
    RULE_exp4 = 42
    RULE_exp5 = 43
    RULE_exp6 = 44
    RULE_exp7 = 45
    RULE_exp8 = 46
    RULE_exp9 = 47
    RULE_funcall = 48
    RULE_arrlit = 49
    RULE_arrtype = 50
    RULE_literals = 51
    RULE_arr = 52
    RULE_intlitarr = 53
    RULE_autotype = 54
    RULE_systemtype = 55
    RULE_boolit = 56
    RULE_comment = 57

    ruleNames =  [ "program", "decls", "decl", "stmt", "assginsta", "callstmt", 
                   "lhs", "ifsta", "forsta", "contista", "breaksta", "returnsta", 
                   "whilesta", "dosta", "blocksta", "body1", "listval", 
                   "listparam", "paramemter", "vardecl", "noninitvardecl", 
                   "initvardecl", "initvardeclrec", "idlist", "spefuncstmt", 
                   "function", "specialfunc", "readInt", "printInt", "readFloat", 
                   "writeFloat", "printBool", "readBool", "readString", 
                   "printString", "superfunc", "predef", "listexp", "exp0", 
                   "exp1", "exp2", "exp3", "exp4", "exp5", "exp6", "exp7", 
                   "exp8", "exp9", "funcall", "arrlit", "arrtype", "literals", 
                   "arr", "intlitarr", "autotype", "systemtype", "boolit", 
                   "comment" ]

    EOF = Token.EOF
    AUTO=1
    BREAK=2
    BOOLEAN=3
    DO=4
    ELSE=5
    FALSE=6
    FLOAT=7
    FOR=8
    IF=9
    INTEGER=10
    RETURN=11
    STRING=12
    TRUE=13
    WHILE=14
    VOID=15
    OUT=16
    CONTINUE=17
    OF=18
    INHERIT=19
    ARRAY=20
    FUNC=21
    READINT=22
    PRINTINT=23
    READF=24
    WRITEF=25
    READBOOL=26
    PRINTBOOL=27
    READSTRING=28
    PRINTSTRING=29
    SUPER=30
    PREDE=31
    ADD=32
    SUB=33
    MUL=34
    DIV=35
    MOD=36
    NOT=37
    AND=38
    OR=39
    EQUAL=40
    NEQUAL=41
    LT=42
    LTE=43
    GT=44
    GTE=45
    CONCAT=46
    ASG=47
    LB=48
    RB=49
    LP=50
    RP=51
    LS=52
    RS=53
    COLO=54
    SEMI=55
    COMMA=56
    DOT=57
    ID=58
    FLOATLIT=59
    INT=60
    STRLIT=61
    WS=62
    WS1=63
    BLOCK_COMMENT=64
    LINE_COMMENT=65
    UNCLOSE_STRING=66
    ILLEGAL_ESCAPE=67
    ERROR_CHAR=68

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decls(self):
            return self.getTypedRuleContext(MT22Parser.DeclsContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.decls(0)
            self.state = 117
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MT22Parser.DeclContext,0)


        def decls(self):
            return self.getTypedRuleContext(MT22Parser.DeclsContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decls

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecls" ):
                return visitor.visitDecls(self)
            else:
                return visitor.visitChildren(self)



    def decls(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MT22Parser.DeclsContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_decls, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.decl()
            self._ctx.stop = self._input.LT(-1)
            self.state = 126
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MT22Parser.DeclsContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_decls)
                    self.state = 122
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 123
                    self.decl() 
                self.state = 128
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function(self):
            return self.getTypedRuleContext(MT22Parser.FunctionContext,0)


        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MT22Parser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.function()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 130
                self.vardecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assginsta(self):
            return self.getTypedRuleContext(MT22Parser.AssginstaContext,0)


        def ifsta(self):
            return self.getTypedRuleContext(MT22Parser.IfstaContext,0)


        def forsta(self):
            return self.getTypedRuleContext(MT22Parser.ForstaContext,0)


        def contista(self):
            return self.getTypedRuleContext(MT22Parser.ContistaContext,0)


        def breaksta(self):
            return self.getTypedRuleContext(MT22Parser.BreakstaContext,0)


        def returnsta(self):
            return self.getTypedRuleContext(MT22Parser.ReturnstaContext,0)


        def blocksta(self):
            return self.getTypedRuleContext(MT22Parser.BlockstaContext,0)


        def callstmt(self):
            return self.getTypedRuleContext(MT22Parser.CallstmtContext,0)


        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def dosta(self):
            return self.getTypedRuleContext(MT22Parser.DostaContext,0)


        def whilesta(self):
            return self.getTypedRuleContext(MT22Parser.WhilestaContext,0)


        def spefuncstmt(self):
            return self.getTypedRuleContext(MT22Parser.SpefuncstmtContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = MT22Parser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_stmt)
        try:
            self.state = 145
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.assginsta()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.ifsta()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 135
                self.forsta()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 136
                self.contista()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 137
                self.breaksta()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 138
                self.returnsta()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 139
                self.blocksta()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 140
                self.callstmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 141
                self.vardecl()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 142
                self.dosta()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 143
                self.whilesta()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 144
                self.spefuncstmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssginstaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lhs(self):
            return self.getTypedRuleContext(MT22Parser.LhsContext,0)


        def ASG(self):
            return self.getToken(MT22Parser.ASG, 0)

        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def exp0(self):
            return self.getTypedRuleContext(MT22Parser.Exp0Context,0)


        def specialfunc(self):
            return self.getTypedRuleContext(MT22Parser.SpecialfuncContext,0)


        def funcall(self):
            return self.getTypedRuleContext(MT22Parser.FuncallContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_assginsta

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssginsta" ):
                return visitor.visitAssginsta(self)
            else:
                return visitor.visitChildren(self)




    def assginsta(self):

        localctx = MT22Parser.AssginstaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assginsta)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.lhs()
            self.state = 148
            self.match(MT22Parser.ASG)
            self.state = 152
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 149
                self.exp0()
                pass

            elif la_ == 2:
                self.state = 150
                self.specialfunc()
                pass

            elif la_ == 3:
                self.state = 151
                self.funcall()
                pass


            self.state = 154
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CallstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def LB(self):
            return self.getToken(MT22Parser.LB, 0)

        def RB(self):
            return self.getToken(MT22Parser.RB, 0)

        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def listexp(self):
            return self.getTypedRuleContext(MT22Parser.ListexpContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_callstmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCallstmt" ):
                return visitor.visitCallstmt(self)
            else:
                return visitor.visitChildren(self)




    def callstmt(self):

        localctx = MT22Parser.CallstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_callstmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(MT22Parser.ID)
            self.state = 157
            self.match(MT22Parser.LB)
            self.state = 159
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.FALSE) | (1 << MT22Parser.TRUE) | (1 << MT22Parser.SUB) | (1 << MT22Parser.NOT) | (1 << MT22Parser.LB) | (1 << MT22Parser.LP) | (1 << MT22Parser.ID) | (1 << MT22Parser.FLOATLIT) | (1 << MT22Parser.INT) | (1 << MT22Parser.STRLIT))) != 0):
                self.state = 158
                self.listexp(0)


            self.state = 161
            self.match(MT22Parser.RB)
            self.state = 162
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LhsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def exp7(self):
            return self.getTypedRuleContext(MT22Parser.Exp7Context,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_lhs

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLhs" ):
                return visitor.visitLhs(self)
            else:
                return visitor.visitChildren(self)




    def lhs(self):

        localctx = MT22Parser.LhsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_lhs)
        try:
            self.state = 166
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 164
                self.match(MT22Parser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 165
                self.exp7()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfstaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(MT22Parser.IF, 0)

        def LB(self):
            return self.getToken(MT22Parser.LB, 0)

        def exp0(self):
            return self.getTypedRuleContext(MT22Parser.Exp0Context,0)


        def RB(self):
            return self.getToken(MT22Parser.RB, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.StmtContext)
            else:
                return self.getTypedRuleContext(MT22Parser.StmtContext,i)


        def ELSE(self):
            return self.getToken(MT22Parser.ELSE, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_ifsta

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfsta" ):
                return visitor.visitIfsta(self)
            else:
                return visitor.visitChildren(self)




    def ifsta(self):

        localctx = MT22Parser.IfstaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ifsta)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(MT22Parser.IF)
            self.state = 169
            self.match(MT22Parser.LB)
            self.state = 170
            self.exp0()
            self.state = 171
            self.match(MT22Parser.RB)
            self.state = 172
            self.stmt()
            self.state = 175
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 173
                self.match(MT22Parser.ELSE)
                self.state = 174
                self.stmt()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForstaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(MT22Parser.FOR, 0)

        def LB(self):
            return self.getToken(MT22Parser.LB, 0)

        def lhs(self):
            return self.getTypedRuleContext(MT22Parser.LhsContext,0)


        def ASG(self):
            return self.getToken(MT22Parser.ASG, 0)

        def exp0(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.Exp0Context)
            else:
                return self.getTypedRuleContext(MT22Parser.Exp0Context,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def exp1(self):
            return self.getTypedRuleContext(MT22Parser.Exp1Context,0)


        def RB(self):
            return self.getToken(MT22Parser.RB, 0)

        def stmt(self):
            return self.getTypedRuleContext(MT22Parser.StmtContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_forsta

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForsta" ):
                return visitor.visitForsta(self)
            else:
                return visitor.visitChildren(self)




    def forsta(self):

        localctx = MT22Parser.ForstaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_forsta)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self.match(MT22Parser.FOR)
            self.state = 178
            self.match(MT22Parser.LB)
            self.state = 179
            self.lhs()
            self.state = 180
            self.match(MT22Parser.ASG)
            self.state = 181
            self.exp0()
            self.state = 182
            self.match(MT22Parser.COMMA)
            self.state = 183
            self.exp1()
            self.state = 184
            self.match(MT22Parser.COMMA)
            self.state = 185
            self.exp0()
            self.state = 186
            self.match(MT22Parser.RB)
            self.state = 187
            self.stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContistaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONTINUE(self):
            return self.getToken(MT22Parser.CONTINUE, 0)

        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_contista

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContista" ):
                return visitor.visitContista(self)
            else:
                return visitor.visitChildren(self)




    def contista(self):

        localctx = MT22Parser.ContistaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_contista)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 189
            self.match(MT22Parser.CONTINUE)
            self.state = 190
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BreakstaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BREAK(self):
            return self.getToken(MT22Parser.BREAK, 0)

        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_breaksta

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBreaksta" ):
                return visitor.visitBreaksta(self)
            else:
                return visitor.visitChildren(self)




    def breaksta(self):

        localctx = MT22Parser.BreakstaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_breaksta)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 192
            self.match(MT22Parser.BREAK)
            self.state = 193
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnstaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(MT22Parser.RETURN, 0)

        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def exp0(self):
            return self.getTypedRuleContext(MT22Parser.Exp0Context,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_returnsta

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnsta" ):
                return visitor.visitReturnsta(self)
            else:
                return visitor.visitChildren(self)




    def returnsta(self):
